[fix] changed color themes and added dark mode

--- a/src/components/organisms/nav/side-nav.css
+++ b/src/components/organisms/nav/side-nav.css
@@ -1,6 +1,4 @@
-.side-nav a:hover{
-    background-color: rgba(0,0,0,0.2);
-}
+
 .side-nav a{
     padding: 10px;
     border-top-right-radius: 16px;
